
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
   	xmlns:tools="http://schemas.android.com/tools" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
		
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
     >
     
      <TextView
        android:id="@+id/AboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title" 
        android:textSize="20sp"/>   
      
      <TextView
        android:id="@+id/AboutInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_info"
        android:paddingBottom="5dp" 
      />   
      
       <TextView
        android:id="@+id/GithubLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_link"
        android:autoLink="web"
        android:paddingBottom="10dp" 
      />   
      
      <TextView
        android:id="@+id/AboutHelpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_title" 
        android:textSize="20sp"/>   
      
     
      <TextView
        android:id="@+id/AboutHelpInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_info" 
        android:paddingBottom="10dp"
       />   
        
      
      <TextView
        android:id="@+id/AboutResourcesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resources_title" 
        android:textSize="20sp"/>   
          
      
      <TextView
        android:id="@+id/AboutResourcesInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="" 
           />   
           
        <TextView
        android:id="@+id/ApacheLicense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="" 
        android:autoLink="web"
           />
          
        <TextView
        android:id="@+id/license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/license" 
        
           />
        
        
        </LinearLayout>
      </ScrollView>
