<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".SwagActivity" 
    >
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
		android:src="@drawable/swagbucks_logo2"
        />
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        android:text="@string/swag_intro" />
     
	<LinearLayout 
	    android:background="@drawable/swag_background"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="left"
	    android:orientation="vertical"
		  >
   
       <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="10dp"
		android:paddingBottom="10dp"
	   >
		          
          <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_vertical"
		        android:drawableLeft="@drawable/circle1"
		        android:drawablePadding="20dp"
		        android:textColor="@color/black"
		        android:text="@string/swag_1" />
		   </LinearLayout>
		   
       <View 
	    android:layout_width="match_parent"
	    android:layout_height="1dip"
	    android:background="@color/gray" 
	     />
        <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="10dp"
		android:paddingBottom="10dp"
	   >
		          
          <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		       android:gravity="center_vertical"
		        android:drawableLeft="@drawable/circle2"
		        android:drawablePadding="20dp"
		        android:textColor="@color/black"
		        android:text="@string/swag_2" />
		   </LinearLayout>
		      
      <View 
	    android:layout_width="match_parent"
	    android:layout_height="1dip"
	    android:background="@color/gray" 
	     />
      
        <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="10dp"
		android:paddingBottom="10dp"
	   >
		          
          <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		     	  android:gravity="center_vertical"
		        android:drawableLeft="@drawable/circle3"
		        android:drawablePadding="20dp"
		        android:textColor="@color/black"
		        android:text="@string/swag_3" />
		   </LinearLayout>
	</LinearLayout> 

	<LinearLayout 
	   	android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:paddingTop="25dp"
	    android:gravity="center"
	    android:orientation="vertical"
		  >
	<Button 
	    android:id="@+id/SignUp"
	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:clickable="true"
        android:text="Sign Up Now"
	    />
	</LinearLayout>
</LinearLayout>
</ScrollView>